Import of MCMAHON/URI-ImpliedBase-0.06 from CPAN.
gitpan-cpan-distribution: URI-ImpliedBase
gitpan-cpan-version:      0.06
gitpan-cpan-path:         MCMAHON/URI-ImpliedBase-0.06.tar.gz
gitpan-cpan-author:       MCMAHON
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl module URI::ImpliedBase
 
+0.06 Wed Aug 31 16:49:30 2005
+	- added pod and pod-coverage tests
+	- updated documentation
+
 0.05 Fri Apr 23 13:12:34 2004
 	- Changes tests to use right module name. Duh.
 
