--- a/Changes
+++ b/Changes
@@ -1,4 +1,7 @@
 Revision history for Perl module URI::ImpliedBase
+0.07 Sun Aug 23 23:47:04 PDT 2009
+	- added license
+	- update META.yml format
 
 0.06 Wed Aug 31 16:49:30 2005
 	- added pod and pod-coverage tests
